--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.column-align-end {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
