Added viewing of secondary cities

--- a/src/app/weather/weather-card/weather-card.component.html
+++ b/src/app/weather/weather-card/weather-card.component.html
@@ -1,12 +1,15 @@
-<div class="card-container">
-  <h1>{{weather.name}}</h1>
-  <h1>{{weather.main.temp}}  °C</h1>
-  <div class="sky">
+<div class="card-container" [class.primary]="coordinates" *ngIf="weather">
+  <span class="city-name">
+    <h1>{{weather.name}}</h1>
+  </span>
+  <span>
+    <h1>{{weather.main.temp}}  °C</h1>
+  </span>
+  <span class="sky">
     <img [src]="weather.weather[0].icon">
     <span>{{weather.weather[0].main}}</span>
-  </div>
+  </span>
   <span>Pressure: {{weather.main.pressure}}</span>
   <span>Humidity: {{weather.main.humidity}}</span>
   <span>Wind speed: {{weather.wind.speed}}</span>
-  <span></span>
 </div>
