--- a/src/app/weather/weather-board/weather-board.component.html
+++ b/src/app/weather/weather-board/weather-board.component.html
@@ -5,5 +5,6 @@
       <button type="submit">Add City</button>
     </form>
   </div>
-  <app-weather-card *ngFor="let city of weather" [weather]="city"></app-weather-card>
+  <app-weather-card *ngIf="mainCityCoords" [coordinates]="mainCityCoords"></app-weather-card>
+  <app-weather-card *ngFor="let city of (cities$ | async)" [city]="city"></app-weather-card>
 </div>
