--- a/src/app/weather/weather-card/weather-card.component.css
+++ b/src/app/weather/weather-card/weather-card.component.css
@@ -8,7 +8,19 @@
   justify-content: space-between;
 }
 
+.primary {
+  border-color: cornflowerblue;
+}
+
 .sky {
   display: flex;
   align-items: center;
+}
+
+span {
+  width: 13vw;
+}
+
+.city-name {
+  min-width: 250px;
 }
