--- a/src/app/weather/weather-card/weather-card.component.html
+++ b/src/app/weather/weather-card/weather-card.component.html
@@ -7,7 +7,7 @@
   </span>
   <span class="sky">
     <img [src]="weather.weather[0].icon" alt="">
-    <span>{{weather.weather[0].main}}</span>
+    <span>{{weather.weather[0].description}}</span>
   </span>
   <span>Pressure: {{weather.main.pressure}}</span>
   <span>Humidity: {{weather.main.humidity}}</span>
