--- a/src/app/weather/weather-card/weather-card.component.html
+++ b/src/app/weather/weather-card/weather-card.component.html
@@ -12,5 +12,7 @@
   <span>Pressure: {{weather.main.pressure}}</span>
   <span>Humidity: {{weather.main.humidity}}</span>
   <span>Wind speed: {{weather.wind.speed}}</span>
-  <img *ngIf="!coordinates" src="assets/icons/red-cross-symbol-icon-as-delete-remove-fail-failure-incorr-incorrect-answer-89999776.jpg" class="remove" alt="Remove" (click)="removeCity()">
+  <img *ngIf="!coordinates"
+       src="assets/icons/red-cross-symbol-icon-as-delete-remove-fail-failure-incorr-incorrect-answer-89999776.jpg"
+       class="remove" alt="Remove" (click)="removeCity()">
 </div>
